@@ -66,6 +66,7 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
     - compat.h: include QtCore/qglobal.h for Q_OS_... macros.
     - pulsemanager.{cpp,h}: new class for PulseAudio management.
     - x2goclient.pro{,.maemo}: reference new pulsemanager.{cpp,h} files.
+    - macbuild.sh: add new MACPORTS_PREFIX detection/variable.
 
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.5.1):
